update app components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,5 +31,5 @@
     <button mat-flat-button color="primary" (click)='logout()'>Logout</button>
   </mat-card>
 
-  <app-home></app-home>
+  <app-home *ngIf='isLoggedIn'></app-home>
 </div>
