--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,29 @@
-<div class="container">
-      <app-tests-list></app-tests-list>
-</div>
+<div>
+      <div class="topnav">
+        <a
+          [routerLink]="['/tests']"
+          routerLinkActive='active'
+          [routerLinkActiveOptions]="{ exact: true }"
+          *ngIf="isLoggedIn"
+          >Tests</a
+        >
+      </div>
+    
+      <mat-card *ngIf="!isLoggedIn">
+        <mat-form-field class ="examle-form-field">
+          <mat-label>Email</mat-label>
+          <input type = "email" matInput placeholder="user@gmail.com" #email>
+        </mat-form-field>
+        <mat-form-field>
+        <mat-label>Password</mat-label>
+          <input type = "password" matInput #password>
+        </mat-form-field>
+        <button mat-flat-button color="primary" (click)='login(email.value, password.value)'>Login</button>
+      </mat-card>
+    
+      <mat-card *ngIf='isLoggedIn'>
+        <button mat-flat-button color="primary" (click)='logout()'>Logout</button>
+      </mat-card>
+    
+      <app-tests-list *ngIf='isLoggedIn'></app-tests-list>
+    </div>
