--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,7 +22,7 @@
     </button>
   </form>
   <div *ngIf="isLoggedIn">
-    <button type="submit" class="btn btn-primary" (click)="logout()">
+    <button type="submit" class="btn btn-danger" (click)="logout()">
       Logout
     </button>
   </div>
