--- a/src/app/components/tests-list/tests-list.component.html
+++ b/src/app/components/tests-list/tests-list.component.html
@@ -8,7 +8,7 @@
           type="button"
           class="btn btn-success mx-5 px-5 mb-2"
           style="float: right"
-          (click)="startTest(test)"
+          (click)="startTest(test.id)"
         >
           Start
         </button>
