--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -1,1 +1,11 @@
+<div class="container mt-3 justify-content-center">
+  <h1>{{ currentTest.name }}</h1>
+  <div class="row">
+    <div class="col-2 text-truncate">
+      {{ currentTest.description }}
+    </div>
+  </div>
 
+  <!-- Select the checkbox "I agree to start", click "Proceed" -->
+  <!-- button "Back to tests list" -->
+</div>
