--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -1,1 +1,67 @@
-<p>question works!</p>
+<div class="container bg-light py-5">
+  <div class="card">
+    <div class="d-flex justify-content-between p-3">
+      <div class="image">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/PNG_transparency_demonstration_1.png/640px-PNG_transparency_demonstration_1.png"
+          width="150"
+          alt="logo"
+        />
+      </div>
+      <div class="quiz-header">
+        <h4>Some Quiz!</h4>
+      </div>
+    </div>
+    <div class="d-flex justify-content-around py-3">
+      <div class="question-remain">
+        <span style="font-style: italic">1 of 3</span>
+      </div>
+    </div>
+    <div class="progress mb-3">
+      <div
+        class="progress-bar progress-bar-striped bg-success"
+        role="progressbar"
+        style="width: 25%"
+        aria-valuenow="25"
+        aria-valuemin="0"
+        aria-valuemax="100"
+      ></div>
+    </div>
+    <div class="question">
+      <div class="card">
+        <h3>Qeustion body</h3>
+      </div>
+    </div>
+    <div class="options">
+      <ol>
+        <li>
+          <div class="card">answer 1</div>
+        </li>
+        <li>
+          <div class="card">answer 2</div>
+        </li>
+        <li>
+          <div class="card">answer 3</div>
+        </li>
+      </ol>
+    </div>
+    <div class="d-flex justify-content-between">
+      <div class="d-flex justify-content-between">
+        <button
+          type="button"
+          class="btn btn-secondary mx-5 px-5 mb-2"
+          style="float: right"
+        >
+          Previous
+        </button>
+      </div>
+      <button
+        type="button"
+        class="btn btn-success mx-5 px-5 mb-2"
+        style="float: right"
+      >
+        Next
+      </button>
+    </div>
+  </div>
+</div>
