implement getting receiving answers & questions from LS

--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -29,7 +29,7 @@
     </div>
     <div class="question">
       <div class="card">
-        <h3>Qeustion body</h3>
+        <h3>{{questionList[currentQuestion].body}}</h3>
       </div>
     </div>
     <div class="options">
