--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -12,64 +12,95 @@
         <h4>Some Quiz!</h4>
       </div>
     </div>
-    <div class="d-flex justify-content-around py-3">
-      <div class="question-remain">
-        <span style="font-style: italic"
-          >Question {{ currentQuestion + 1 }} of {{ questionList.length }}</span
-        >
+    <ng-container *ngIf="!isQuizComleted">
+      <div class="d-flex justify-content-around py-3">
+        <div class="question-remain">
+          <span style="font-style: italic"
+            >Question {{ currentQuestion + 1 }} of
+            {{ questionList.length }}</span
+          >
+        </div>
       </div>
-    </div>
-    <div class="progress mb-3">
-      <div
-        class="progress-bar progress-bar-striped bg-success"
-        role="progressbar"
-        [ngStyle]="{'width': progerss+'%'}"
-        aria-valuenow="25"
-        aria-valuemin="0"
-        aria-valuemax="100"
-      ></div>
-    </div>
-    <div class="question">
-      <div class="card">
-        <h3>{{ questionList[currentQuestion]?.body }}</h3>
+      <div class="progress mb-3">
+        <div
+          class="progress-bar progress-bar-striped bg-success"
+          role="progressbar"
+          [ngStyle]="{ width: progerss + '%' }"
+          aria-valuenow="25"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        ></div>
       </div>
-    </div>
-    <div class="answers">
-      <ol *ngFor="let answer of answerList">
-        <li (click)="checkAnswer(answer.isCorrect, currentQuestion)">
-          <div class="card">{{ answer?.bodyAnswer }}</div>
-        </li>
-      </ol>
-    </div>
-    <div class="d-flex justify-content-between">
+      <div class="question">
+        <div class="card">
+          <h3>{{ questionList[currentQuestion]?.body }}</h3>
+        </div>
+      </div>
+      <div class="answers">
+        <ol *ngFor="let answer of answerList">
+          <li (click)="checkAnswer(answer.isCorrect, currentQuestion)">
+            <div class="card">{{ answer?.bodyAnswer }}</div>
+          </li>
+        </ol>
+      </div>
       <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between">
+          <button
+            [hidden]="currentQuestion <= 0"
+            type="button"
+            class="btn btn-secondary mx-5 px-5 mb-2"
+            style="float: right"
+            (click)="previousQuestion()"
+          >
+            Previous
+          </button>
+        </div>
         <button
-          [hidden]="currentQuestion <= 0"
+          [hidden]="currentQuestion !== questionList.length - 1"
           type="button"
-          class="btn btn-secondary mx-5 px-5 mb-2"
+          class="btn btn-success mx-5 px-5 mb-2"
           style="float: right"
-          (click)="previousQuestion()"
+          (click)="getResult()"
         >
-          Previous
+          Results
+        </button>
+        <button
+          [hidden]="currentQuestion >= questionList.length - 1"
+          type="button"
+          class="btn btn-primary mx-5 px-5 mb-2"
+          style="float: right"
+          (click)="nextQuestion()"
+        >
+          Next
         </button>
       </div>
-      <button
-        [hidden]="currentQuestion !== questionList.length - 1"
-        type="button"
-        class="btn btn-success mx-5 px-5 mb-2"
-        style="float: right"
-      >
-        Results
-      </button>
-      <button
-        [hidden]="currentQuestion >= questionList.length - 1"
-        type="button"
-        class="btn btn-primary mx-5 px-5 mb-2"
-        style="float: right"
-        (click)="nextQuestion()"
-      >
-        Next
-      </button>
-    </div>
+    </ng-container>
+    <ng-container *ngIf="isQuizComleted">
+      <div class="row d-flex justify-content-between">
+        <img
+          style="width: 40%"
+          class="img-fluid col-sm-12 mx-auto"
+          src="https://cdn.iconscout.com/icon/free/png-256/celebration-party-popper-tada-decoration-christmas-38099.png"
+          alt=""
+        />
+        <div class="text-center col-md-6 col-sm-12">
+          <h3 style="font-style: italic">
+            Congratulations!!!<br />You've completed the quiz
+            {{ getCurrentTest().name }}<br />Your result:
+          </h3>
+          <br />
+          <h4>
+            <p>Total question attempted: {{ questionList.length }}</p>
+            <p>Total correct answered: {{ correctAnswers }}</p>
+            <p>Total wrong answered: {{ correctAnswers }}</p>
+          </h4>
+          <div class="d-grid gap-2 col-6 mx-auto py-5">
+            <button type="button" class="btn btn-danger" (click)="backToList()">
+              Back to list of Tests
+            </button>
+          </div>
+        </div>
+      </div>
+    </ng-container>
   </div>
 </div>
