--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,7 +26,7 @@
       Logout
     </button>
   </div>
-  <div class="container mt-3">
+  <div class="my-3">
     <app-tests-list *ngIf="isLoggedIn"></app-tests-list>
   </div>
 </div>
