--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -1,35 +1,52 @@
-<div class="container mt-3">
-  <h1>{{ getCurrentTest()?.name }}</h1>
-  <div class="row">
-    <div class="col-2 text-truncate">
-      {{ getCurrentTest()?.description }}
+<div class="container bg-light pt-5">
+  <div class="card text-center">
+    <div class="card-header">
+      <h3>{{ getCurrentTest()?.name }}</h3>
+    </div>
+    <div class="card-body">
+      <h4 class="card-title">Test Description</h4>
+      <div class="description mt-2 mb-5">
+        <p class="card-text" style="font-size: large">
+          {{ getCurrentTest()?.description }}
+        </p>
+      </div>
+
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <!-- Select the checkbox "I agree to start", click "Proceed" -->
+        <button
+          type="button"
+          class="btn btn-success btn-lg"
+          [disabled]="isProceed"
+          (click)="startQuiz()"
+        >
+          Proceed
+        </button>
+      </div>
+      <div class="d-flex justify-content-center my-4">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          [checked]="isAgree"
+          (change)="change($event)"
+        />
+        <label
+          class="form-check-label mx-1"
+          for="flexCheckChecked"
+          style="font-size: large"
+        >
+          I agree to start
+        </label>
+      </div>
+    </div>
+    <div class="card-footer text-muted">
+      <!-- button "Back to tests list" -->
+      <button
+        type="button"
+        class="btn btn-danger btn-lg"
+        (click)="backToList()"
+      >
+        Back
+      </button>
     </div>
   </div>
-
-  <!-- Select the checkbox "I agree to start", click "Proceed" -->
-  <button
-    type="button"
-    class="btn btn-success btn-lg"
-    [disabled]="isProceed"
-    (click)="startQuiz()"
-  >
-    Proceed
-  </button>
-
-  <div class="form-check my-2">
-    <input
-      class="form-check-input"
-      type="checkbox"
-      [checked]="isAgree"
-      (change)="change($event)"
-    />
-    <label class="form-check-label" for="flexCheckChecked">
-      I agree to start
-    </label>
-  </div>
-
-  <!-- button "Back to tests list" -->
-  <button type="button" class="btn btn-danger" (click)="backToList()">
-    Back
-  </button>
 </div>
